# NewsWeatherFeed

./: README.md  docker-compose.yml  example.env  nginx.conf
bot/: Dockerfile  pyproject.toml
bot/src/: main.py
bot/src/core/: aio_client.py  config.py  exceptions.py
bot/src/handlers/: constants.py  messages.py
bot/src/utils/: constants.py  get_weather.py  menu_commands.py  requests.py
dashboard/: Dockerfile  pyproject.toml
dashboard/web/api/: serializers.py  urls.py  views.py
dashboard/web/telegram/: admin.py  models.py  views.py
dashboard/web/telegram/migrations/: 0001_initial.py  0002_remove_commandstatistics_date.py
dashboard/web/telegram/templates/: index.html
dashboard/web/web/: settings.py  urls.py
