[tool.poetry]
name = "weather-bot"
version = "0.1.0"
description = ""
authors = ["Artem Nosov"]
readme = "README.md"
packages = [
    { include = "*", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "2.25.1"
pydantic = "1.8.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
