[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = ""
authors = ["Artem Nosov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "2.2.19"
djangorestframework = "3.12.4"
python-dotenv = "1.0.0"
gunicorn = "21.2.0"
psycopg2-binary = "2.9.6"
django-filter = "2.4.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
django-extensions-shell = "1.7.4.1"
django-debug-toolbar = "3.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
